{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 17,
  "lineage": "7b333140-9765-1b15-7749-4ebc06c044da",
  "resources": [
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [
                  "shop-app-service-d48e48e174e2.azurewebsites.net"
                ],
                "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/backendAddressPools/d48e48e174e2-beap",
                "ip_addresses": [],
                "name": "d48e48e174e2-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/backendHttpSettingsCollection/d48e48e174e2-be-htst",
                "name": "d48e48e174e2-be-htst",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 5000,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 2,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/frontendIPConfigurations/d48e48e174e2-feip",
                "name": "d48e48e174e2-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/publicIPAddresses/public-ip-d48e48e174e2",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/frontendPorts/d48e48e174e2-feport",
                "name": "d48e48e174e2-feport",
                "port": 5000
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/gatewayIPConfigurations/app-gateway-ip-configuration-d48e48e174e2",
                "name": "app-gateway-ip-configuration-d48e48e174e2",
                "subnet_id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/virtualNetworks/d48e48e174e2-vnet/subnets/subnet-app-gateway-d48e48e174e2"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/frontendIPConfigurations/d48e48e174e2-feip",
                "frontend_ip_configuration_name": "d48e48e174e2-feip",
                "frontend_port_id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/frontendPorts/d48e48e174e2-feport",
                "frontend_port_name": "d48e48e174e2-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/httpListeners/d48e48e174e2-httplstn",
                "name": "d48e48e174e2-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2",
            "identity": [],
            "location": "francecentral",
            "name": "app-gateway-d48e48e174e2",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/backendAddressPools/d48e48e174e2-beap",
                "backend_address_pool_name": "d48e48e174e2-beap",
                "backend_http_settings_id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/backendHttpSettingsCollection/d48e48e174e2-be-htst",
                "backend_http_settings_name": "d48e48e174e2-be-htst",
                "http_listener_id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/httpListeners/d48e48e174e2-httplstn",
                "http_listener_name": "d48e48e174e2-httplstn",
                "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/applicationGateways/app-gateway-d48e48e174e2/requestRoutingRules/d48e48e174e2-rqrt",
                "name": "d48e48e174e2-rqrt",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "shop-app-rg-d48e48e174e2",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.shop",
            "module.app_service.azurerm_linux_web_app.app_service_project",
            "module.app_service.azurerm_service_plan.service_plan_project",
            "module.database.azurerm_postgresql_flexible_server.postgresql-server",
            "module.database.azurerm_private_dns_zone.private_dns_zone",
            "module.gateway.azurerm_public_ip.public_ip",
            "module.vnet.azurerm_subnet.subnet_app_gateway",
            "module.vnet.azurerm_subnet.subnet_app_service",
            "module.vnet.azurerm_subnet.subnet_db",
            "module.vnet.azurerm_virtual_network.vnet",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/publicIPAddresses/public-ip-d48e48e174e2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.211.177.35",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "public-ip-d48e48e174e2",
            "resource_group_name": "shop-app-rg-d48e48e174e2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.shop",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-application",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/networkSecurityGroups/nsg-application-d48e48e174e2",
            "location": "francecentral",
            "name": "nsg-application-d48e48e174e2",
            "resource_group_name": "shop-app-rg-d48e48e174e2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_From_App_Gateway",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.shop",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/networkSecurityGroups/nsg-database-d48e48e174e2",
            "location": "francecentral",
            "name": "nsg-database-d48e48e174e2",
            "resource_group_name": "shop-app-rg-d48e48e174e2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_From_App_Gateway",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.shop",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/virtualNetworks/d48e48e174e2-vnet/subnets/subnet-app-gateway-d48e48e174e2",
            "name": "subnet-app-gateway-d48e48e174e2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "shop-app-rg-d48e48e174e2",
            "virtual_network_name": "d48e48e174e2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.shop",
            "module.vnet.azurerm_virtual_network.vnet",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_app_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "delegation-app-service-d48e48e174e2",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/virtualNetworks/d48e48e174e2-vnet/subnets/subnet-app-service-d48e48e174e2",
            "name": "subnet-app-service-d48e48e174e2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "shop-app-rg-d48e48e174e2",
            "virtual_network_name": "d48e48e174e2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.shop",
            "module.vnet.azurerm_virtual_network.vnet",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "delegation-db-d48e48e174e2",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/virtualNetworks/d48e48e174e2-vnet/subnets/subnet-db-d48e48e174e2",
            "name": "subnet-db-d48e48e174e2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "shop-app-rg-d48e48e174e2",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "d48e48e174e2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.shop",
            "module.vnet.azurerm_virtual_network.vnet",
            "random_id.random"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a5904bb8-7768-4eb8-b420-ac8ca3af09b4",
            "id": "/subscriptions/2d8d3767-6ea6-4e1a-a6b1-606e793fca7d/resourceGroups/shop-app-rg-d48e48e174e2/providers/Microsoft.Network/virtualNetworks/d48e48e174e2-vnet",
            "location": "francecentral",
            "name": "d48e48e174e2-vnet",
            "resource_group_name": "shop-app-rg-d48e48e174e2"
          },
          "dependencies": [
            "azurerm_resource_group.shop",
            "random_id.random"
          ]
        }
      ]
    }
  ]
}